Fixing alignment.

--- a/_dprhtml/index.css
+++ b/_dprhtml/index.css
@@ -184,10 +184,6 @@ textarea.bottom-item {
   min-width: 120px;
 }
 
-#cinform, #coutform {
-  min-width: 120px;
-}
-
 .cv-btn-group {
   margin: 2px;
   width: 120px;
